<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_title"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_et"
                android:layout_margin="8dp"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_title"
                android:layout_margin="8dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_et"
                android:layout_margin="8dp"
                android:text="@string/reg_price"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/reg_price_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_title"
                android:layout_margin="8dp"
                android:hint="@string/reg_price"
                android:inputType="number" />


            <TextView
                android:id="@+id/sale_price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_price_et"
                android:layout_margin="8dp"
                android:text="@string/sale_price"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/sale_price_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sale_price_title"
                android:layout_margin="8dp"
                android:inputType="number" />

            <TextView
                android:id="@+id/color_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sale_price_et"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/color_title"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rg_color1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="Red"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/rg_color2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="Green"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/rg_color3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="Yellow"
                    android:textSize="25dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/store_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rg_color"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/store"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_stores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/store_title"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rg_store1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="A"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/rg_store2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="B"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/rg_store3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="C"
                    android:textSize="25dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/photo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rg_stores"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/photo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/photo_id"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/button_drawable"
                android:layout_below="@+id/photo_title"
                android:layout_margin="8dp"
                android:src="@drawable/ic_add_black_24dp" />


            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:background="@drawable/button_drawable"
                android:layout_height="wrap_content"
                android:layout_below="@+id/photo_id"
                android:text="@string/submit"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>